Changelog
=========

1.0 (unreleased)
------------------

- Bootstrap: update themes with fixes for Plone-related views and
  different AJAX views.
  [davidjb]
- Bootstrap: fix text mapping class for expired content.
  [davidjb]
- Bootstrap: add icons into theme for default content types.
  [davidjb]
- Bootstrap: apply navigation classes to each sub-level of navigation
  in a portlet.
  [davidjb]
- Bootstrap: fix displaying navigation portlet heading when it shouldn't be
  shown.
  [davidjb]
- Bootstrap: apply existing attributes from list items in colophon.
  [davidjb]
- Bootstrap: import form theme handling. Port CSS-applied styling
  for field widths into Bootstrap-style classes. This improves
  the display of textareas, inputs, and title/description fields.
  [davidjb]
- Bootstrap: theme content being generated from Plone's visual editor
  in line with Bootstrap classes.
- Bootstrap: theme plone.app.discussion page elements for Bootstrap.
  [davidjb]
- Bootstrap: adjust form markup to handle checkboxes inside "label" div
  elements not being displayed due to Bootstrap styling.
  [davidjb]
- Bootstrap: reduce empty page space on edit by combining content view
  tabs and actions menus.
  [davidjb]
- Bootstrap: ensure portal-columns are ordered to reflect left-to-right
  layout from Plone.
  [davidjb]
- Bootstrap: allow collective.js.jqueryui CSS from Plone to be included
  in themed pages.
  [davidjb]
- Bootstrap: allow ++resource++ CSS from Plone to be included in themed
  pages.  This allows for most non-default CSS (such as add-ons) to be 
  included in pages.
  [davidjb]
- Bootstrap: prevent search dropdown menu from closing on click.
  [davidjb]
- Bootstrap: fix replacement rule for responsive CSS.
  [davidjb]
- Bootstrap: improve flexibility of footer to handle multiple list items
  and include on output page. Backwards compatibility maintained
  with original styling.
  [davidjb]
- Bootstrap: reduce size of search input to allow for increased header